# hub

./: .gitignore  CONTINUE.md  Cargo.toml  FEATURE_FORWARDING.md  README.md  STALE_DOCS_TO_REMOVE.txt  START.txt  STRATEGY.md  TASKS.txt  UPDATE.txt  boxy_default.yml  deps_cache.tsv  deps_data.txt  test_change.txt  test_file.txt
.eggs/: egg.1.blade-migration-complete.txt  egg.1.boxy-color-preservation-debug.txt  egg.1.deps-to-repos-rename.txt  egg.1.hub-ecosystem-analysis.txt  egg.1.hub-restructuring-proposal.txt  egg.1.readme-update.txt  egg.1.repos-command-validation.txt  egg.1.strategy-docs-analysis.txt  egg.2.boxy-integration-strategy.txt  egg.2.document-landscape-analysis.txt  egg.2.hub-ecosystem-analysis.txt  egg.2.proposed-cargo-toml.txt  egg.2.view-optimization-strategy.txt  egg.3.boxy-code-examples.txt  egg.3.proposed-lib-rs.txt  egg.3.repos-fast-implementation-analysis.txt  egg.GOLDEN.consolidated-wisdom.txt
.session/: CONTINUE.md  SESSION_01_fast_view_ux.md  SESSOIN_03.md
.uat/v0.1.0/: BUG_REGRESSION_01.md  BUG_REGRESSION_02.md  FEATHER_USABILITY_01.md  UAT_CERTIFIED_v0.1.0_LEVEL2.md
docs/: AUTOMATION.md  CHECK_DEPS.md  CHECK_DEPS_EXAMPLES.md  FEATURE_PATHS.md  HUB_STRAT.md  REFACTOR_STRAT.md  SHAPING_PARADIGM.md  VERSION_STRAT.md
docs/misc/archive/: egg.FINAL.meta-process-consolidation.txt  egg.GOLDEN.consolidated-wisdom.txt
docs/procs/: ACHIEVEMENTS.md  CONTINUE.md  DONE.txt  PROCESS.txt  QUICK_REF.txt  TASKS.txt
docs/ref/: ARCHITECTURE.md  REFACTOR_NOTES.md
src/: chrono.rs  clap.rs  colors.rs  error.rs  lib.rs  regex.rs  serde.rs  serde_json.rs  tokio.rs
tests/: feature_paths.rs  shaped_exports.rs
