[package]
name = "hub"
version = "0.3.1"
description = "Central hub for oodx/RSB ecosystem - dependency management and global utilities"
license = "AGPL-3.0"
repository = "https://github.com/oodx/hub"
edition = "2021"

[features]
default = []

# Internal oodx/rsb features
colors = []

# Individual dependency features (external)
anyhow = ["dep:anyhow"]
base64 = ["dep:base64"]
chrono = ["chrono-lite"]
chrono-lite = ["dep:chrono", "chrono/clock", "chrono/std"]
chrono-full = ["dep:chrono", "chrono/clock", "chrono/std", "chrono/serde"]
clap = ["clap-lite"]
clap-lite = ["dep:clap", "clap/std", "clap/help"]
clap-full = ["dep:clap", "clap/std", "clap/help", "clap/derive", "clap/env", "clap/unicode"]
glob = ["dep:glob"]
lazy_static = ["dep:lazy_static"]
libc = ["dep:libc"]
portable-pty = ["dep:portable-pty"]
rand = ["dep:rand"]
regex = ["dep:regex"]
serde = ["dep:serde"]
serde-derive = ["serde", "serde/derive"]
serde-json = ["serde", "dep:serde_json"]
json = ["serde-derive", "serde-json"]
serde_yaml = ["dep:serde_yaml"]
strip-ansi-escapes = ["dep:strip-ansi-escapes"]
tokio = ["tokio-lite"]
tokio-lite = ["dep:tokio", "tokio/rt", "tokio/macros"]
tokio-full = ["dep:tokio", "tokio/full"]
urlencoding = ["dep:urlencoding"]
uuid = ["dep:uuid"]

# Domain-based feature groups (external third-party packages - use if we have to)
text-ext = ["regex", "lazy_static", "unicode-width", "strip-ansi-escapes"]
data-ext = ["serde-derive", "serde-json", "base64", "serde_yaml"]
time-ext = ["chrono-lite", "uuid"]
web-ext = ["urlencoding"]
system-ext = ["libc", "glob"]
terminal-ext = ["portable-pty"]
random-ext = ["rand"]
async-ext = ["tokio-lite"]
cli-ext = ["clap-lite", "anyhow"]
error = ["error-ext"]
error-ext = ["anyhow", "thiserror"]
test-ext = ["criterion", "tempfile"]

# Convenience feature groups (external)
common-ext = ["text-ext", "data-ext", "error-ext", "test-ext"]
core-ext = ["text-ext", "data-ext", "time-ext", "error-ext"]
extended-ext = ["text-ext", "data-ext", "time-ext", "web-ext", "system-ext", "cli-ext"]
dev-ext = ["text-ext", "data-ext", "time-ext", "web-ext", "system-ext", "terminal-ext", "random-ext", "async-ext", "cli-ext", "error-ext", "test-ext"]

# Internal oodx/rsb feature groups (reserved for our own modules)
core = ["colors"]
# Future internal groups:
# utils = ["colors", "shared"]
# ecosystem = ["colors", "shared", "rsb"]

# Legacy compatibility with RSB deps- naming
deps-anyhow = ["anyhow"]
deps-base64 = ["base64"]
deps-chrono = ["chrono"]
deps-clap = ["clap"]
deps-glob = ["glob"]
deps-lazy_static = ["lazy_static"]
deps-libc = ["libc"]
deps-rand = ["rand"]
deps-regex = ["regex"]
deps-serde = ["serde"]
deps-serde_json = ["serde-json"]
deps-serde_yaml = ["serde_yaml"]
deps-strip-ansi-escapes = ["strip-ansi-escapes"]
deps-tokio = ["tokio"]
deps-urlencoding = ["urlencoding"]
deps-uuid = ["uuid"]

deps-all = [
    "deps-anyhow",
    "deps-base64",
    "deps-chrono",
    "deps-clap",
    "deps-glob",
    "deps-lazy_static",
    "deps-libc",
    "deps-rand",
    "deps-regex",
    "deps-serde",
    "deps-serde_json",
    "deps-serde_yaml",
    "deps-strip-ansi-escapes",
    "deps-tokio",
    "deps-urlencoding",
    "deps-uuid",
]

# Convenience alias for the full set (RSB compatibility)
deps = ["deps-all"]
unicode-width = ["dep:unicode-width"]
criterion = ["dep:criterion"]
thiserror = ["dep:thiserror"]
tempfile = ["dep:tempfile"]
[dependencies]
# Core external dependencies - versions managed centrally
anyhow = { version = "1.0", optional = true }
base64 = { version = "0.22.1", optional = true }
chrono = { version = "0.4.42", optional = true, default-features = false }
clap = { version = "4.5", optional = true, default-features = false }
glob = { version = "0.3.3", optional = true }
lazy_static = { version = "1.5.0", optional = true }
libc = { version = "0.2.175", optional = true }
portable-pty = { version = "0.9", optional = true }
rand = { version = "0.9.2", optional = true }
regex = { version = "1.11.2", optional = true }
serde = { version = "1.0.226", optional = true, default-features = false }
serde_json = { version = "1.0.145", optional = true }
serde_yaml = { version = "0.9", optional = true }
strip-ansi-escapes = { version = "0.2", optional = true }
tokio = { version = "1.41", optional = true, default-features = false }
urlencoding = { version = "2.1.3", optional = true }
uuid = { version = "1.18.1", features = ["v4"], optional = true }
unicode-width = { version = "0.2.1", optional = true }
criterion = { version = "0.7.0", optional = true }
thiserror = { version = "2.0.16", optional = true }
tempfile = { version = "3.22.0", optional = true }

[dev-dependencies]
# Development tools for testing cargohold itself
assert_cmd = "2.0"
predicates = "3.0"

[lib]
name = "hub"
path = "src/lib.rs"

[package.metadata.hub]
# Custom hub metadata section for hub configuration
